completed the audiogram page

--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -745,3 +745,17 @@ pre {
 	display:none;
 }
 
+
+/** New **/
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.other::after {
+    content: "";
+    clear: both;
+    display: table;
+}
