--- a/app/webroot/cssOri/cake.generic.css
+++ b/app/webroot/cssOri/cake.generic.css
@@ -28,11 +28,11 @@ body {
 	font-size:90%;
 	margin: 0;
 }
-a {
+/*a {
 	color: #003d4c;
 	text-decoration: underline;
 	font-weight: bold;
-}
+}*/
 a:hover {
 	color: #367889;
 	text-decoration:none;
